@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Address {
  -double latitude
  -double longitude
  -String street
  -int doorNumber
  -String zipCode
  -String locality
}

class Administrator {
  -String name
}

class User {
  -String email
  -String password
  -String role
}

class Client {
  -int idClient
  -String name
  -String email
  -int nif
  -int numCredits
  -double latitude
  -double longitude
}
  
class Courier {
  -int idCourier
  -String name
  -int NIF
  -long NSS
  -double maxWeightCapacity
  -double weight
  -int pharmacyID
  -String email
}
  
class Cart {
  -double finalPrice
  -double finalWeight
  -List productsToBuy
}
  
class CreditCard {
  -long cardNumber
  -int monthExpiration
  -int yearExpiration
  -int ccv
}
  
class ClientOrder {
  -int orderID
  -Date dateOrder
  -double finalPrice
  -double finalWeight
  -int status
  -int clientId
  -int deliveryId
}
  


class Pharmacy {
  -String id
  -String name
  -int quantityScooters
  }

class Vehicle {
  -String id
  -String licencePlate
  -double maxBattery
  -double actualBattery
  -int status
  -int isCharging
  -double enginePower
  -double ah_battery
  -double v_battery
  -double weight
  -int idPharmacy
  -int typeVehicle
  }

class Invoice {
  -String number
  -String date
  -double finalPrice
  }

class Stock {
  -String productID
  -int quantity
}

class Product {
  -String name
  -String description
  -String price 
  -double weight
  -double pharmacyID
  -int id
  -int quantityStock
}

class Park {
  -String id
  -int maxCapacity
  -int actualCapacity
  -int maxChargingPlaces
  -int actualChargingPlaces
  -int power
  -int pharmacyID
}

class Delivery {
  -String id
  -double necessaryEnergy
  -double distance
  -double weight
}
  
class Invoice {
  -int id
  -Date dateInvoice
  -double finalPrice
  -int clientID
  -int idOrder
}
  
  
Client "1" -- "1" Address: Has >
Client "1" -- "1" CreditCard: Has >
Client "1" -- "1.." Invoice: Receives >
Client "1" -- "1.." Cart: Has >

Cart "1" -- "0.." Product: Has >
Cart "1" -- "1" ClientOrder: Generate >

ClientOrder "1" -- "1.." Product: Has >
ClientOrder "1" -- "1" Invoice: Generates >
  
Pharmacy "1" -- "1" Park: Has >
Pharmacy "1" -- "1.." Product: Has >
Pharmacy "1" -- "1.." Courier: Has >
Pharmacy "1" -- "1" Address: Has >
Pharmacy "1" -- "1.." Vehicle: Has >

Product "1" -- "1" Stock: Has > 

Administrator "1" -- "1.." Pharmacy: Manages >

Delivery "1" -- "1.." ClientOrder: Has >
Delivery "1" -- "1" Vehicle: Made with >

Courier "1" -- "1" Delivery: Does >
  
Administrator "1" -- "1" User: Is a >
Client "1" -- "1" User: Is a >
Courier "1" -- "1" User: Is a >

Client "1" -- "1.." ClientOrder: Has>



@enduml